--- a/_base/templates/base.html
+++ b/_base/templates/base.html
@@ -73,7 +73,7 @@
             <div class="nav-auth-container">
                 {% if not user.is_authenticated %}
                 <a href="{% url 'login' %}">Login</a>
-                <a href="{% url 'init_email_auth' %}" class="green-highlight">Register</a>
+                <a href="{% url 'init_email_auth' %}" class="register-nav-btn">Register</a>
                 {% elif user.role == 'CLIENT' %}
                 <a href="{% url 'get_client' %}"><i class="fa-solid fa-user"></i></a>
                 {% elif user.role == 'CREATOR' %}
