debugged subscribed listings page

--- a/_base/templates/subscriptions/client/subscribed-listings.html
+++ b/_base/templates/subscriptions/client/subscribed-listings.html
@@ -45,9 +45,10 @@
                     </div>
                 </dialog>
             </div>
+            {% endfor %}
         {% else %}
-            <b>No vacancy updates yet!</b>
-        {% endfor %}
+            <b>No vacancy updates</b>
+        {% endif %}
     </div>
 </main>
 
