--- a/_base/templates/users/creator/listings.html
+++ b/_base/templates/users/creator/listings.html
@@ -10,8 +10,6 @@
     <div class="listings-container">
         <h3>My Lodges</h3>
 
-        <!-- <a href="{% url 'register_lodge' %}">Register hostel</a> -->
-
         {% if user.lodges.all %}
         <ul>
             {% for lodge in user.lodges.all %}
@@ -53,7 +51,14 @@
         hx-target="#register-lodge-form"
         >
             {% csrf_token %}
-            {{lodge_registration_form}}
+            {% for field in lodge_registration_form %}
+            {% if field.name != 'id_room_types' %}
+            <div>
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                {{ field }}
+            </div>
+            {% endif %}
+            {% endfor %}
 
             <button type="submit">Register</button>
         </form>
