--- a/_base/templates/payments/withdraw.html
+++ b/_base/templates/payments/withdraw.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Withdraw Payment</title>
-</head>
-<body>
-    <h1>Enter the amount you want to Withdraw</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
-    </form>
-    {% if messages %}
-        {% for message in messages %}
-            <div>{{ message }}</div>
-        {% endfor %}
-    {% endif %}
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block page_stylesheets %}
+    <link rel="stylesheet" href="{% static 'users/styles/creator-earnings.css' %}?uuid={{uuid}}">
+{% endblock %}
+
+{% block main %}
+<main id="main">
+    <div class="creator-payment-container">
+        <h1>Cash Out</h1>
+        <form class="creator-payment-form" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+</main>
+
+{% endblock %}
