--- a/_base/templates/users/client/dashboard.html
+++ b/_base/templates/users/client/dashboard.html
@@ -52,8 +52,7 @@
 
         <ul>
             <li><i class="fa-solid fa-check-double"></i>Active Subscriptions: {% if active_subscriptions %}{{active_subscriptions.count}}{% else %}0{% endif %}</li>
-            <li><i class="fa-solid fa-check-double"></i>Complete Transactions: {% if complete_transactions %}{{complete_transactions.count}}{% else %}0{% endif %}</li>
-            <li><i class="fa-solid fa-ban"></i>Aborted Transactions: {% if incomplete_transactions %}{{incomplete_transactions.count}}{% else %}0{% endif %}</li>
+            <li><i class="fa-solid fa-flag-checkered slate-gray"></i>Expired Subscriptions: {% if expired_subscriptions %}{{expired_subscriptions.count}}{% else %}0{% endif %}</li>
             <!-- <li><i class="fa-solid fa-naira-sign"></i> Total Paid: {% if total_paid %}{{total_paid}}{% else %}0{% endif %}</li> -->
         </ul>
     </div>
