--- a/_base/templates/listings/lodge-profile.html
+++ b/_base/templates/listings/lodge-profile.html
@@ -18,13 +18,27 @@
             <b>{{ room_type }}</b>
             <form method="post" action="{% url 'update_room_profile' pk=form.instance.pk %}">
                 {% csrf_token %}
-                {{form}}
-                <button>update</button>
+                {{ form }}
+    
+                <a href="{% url 'upload_room_profile_image' room_profile_id=form.instance.pk %}"> Upload image </a>
+    
+                <!-- Display room images -->
+                <div class="room-images">
+                    {% for image in form.instance.room_images.all %}
+                    <div>
+                        <img src="{{ image.image.url }}" alt="Room Image" style="width: 100px; height: auto;">
+                        <p>Description: {{ image.description }}</p>
+                    </div>
+                    {% empty %}
+                    <p>No images uploaded for this room profile.</p>
+                    {% endfor %}
+                </div>
+    
+                <button type="submit">Update</button>
             </form>
         </div>
         {% endfor %}
     </div>
-
     {% comment %}
     <h4 style="margin: 0">Unavailable Room Types</h4>
     {% for room_type in unavailable_room_types %}
